--- a/inne.html
+++ b/inne.html
@@ -10,13 +10,17 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="https://dawid108.github.io/dawi108/20250712_wschodniapolska.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752348697/wschodniapolska_vcnauv.png" alt="Wschodnia Polska">
+                <span>Wschodnia Polska</span>
+            </a>
             <a href="https://dawid108.github.io/dawi108/20250705_jezyknorweski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752342386/jezyknorweski_lko97f.png" alt="Język Norweski">
                 <span>Język Norweski</span>
             </a>
             <a href="https://dawid108.github.io/dawi108/20250703_norwegia.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Do Fiordów Norwegii">
-                <span>Do Fiordów Norwegii</span>
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Norwegia">
+                <span>Norwegia</span>
             </a>
             <a href="https://dawid108.github.io/dawi108/20250625_fifa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
