--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <header>Wschodnia Polska – Wycieczka Objazdowa</header>
+  <header>Wschodnia Polska</header>
 
   <div class="nav">
     <div id="prev" class="arrow">&#x25C0;</div>
@@ -116,40 +116,24 @@
 
     const content = {
       '2025-07-16': {
-        title: "Dzień 1 – Start wycieczki: Białystok",
-        description: "Rozpoczęcie wycieczki w Białymstoku. Spacer po mieście, zwiedzanie Pałacu Branickich.",
-        googleMaps: "https://www.google.com/maps/dir//Pałac+Branickich,+Białystok"
-      },
-      '2025-07-17': {
-        title: "Dzień 2 – Wycieczka na Tarnicę",
-        description: "Przejazd do Wołosatego i wejście na Tarnicę – najwyższy szczyt Bieszczadów.",
-        googleMaps: "https://www.google.com/maps/dir//Wołosate",
+        title: "Dzień 1",
+        description: "Krotoszyn - Kozie Żebro - Wątkowa - Łysula - Schronisko Teodorówka - Pałac w Dukli - Argoturystyka Stokrotka Rymanów-Zdrój",
+        googleMaps: "https://maps.app.goo.gl/P2nfdWydi9QaXKEM6",
         mapycz: [
           {
-            title: "Tarnica 1346 m n.p.m.",
-            url: "https://mapy.cz/s/kunagohoja"
-          }
-        ]
-      },
-      '2025-07-18': {
-        title: "Dzień 3 – Dwie trasy górskie",
-        description: "Dzień w Bieszczadach – dwie grupy wyruszają na różne trasy.",
-        googleMaps: "https://www.google.com/maps/dir//Ustrzyki+Górne",
-        mapycz: [
-          {
-            title: "Połonina Caryńska",
-            url: "https://mapy.cz/s/pugojazaru"
+            title: "Kozie Żebro (888 m)",
+            url: "https://mapy.com/s/mehozamoje"
           },
           {
-            title: "Połonina Wetlińska",
-            url: "https://mapy.cz/s/jasupotasu"
+            title: "Wątkowa (846 m)",
+            url: "https://mapy.com/s/lojelabono"
+          },
+          {
+            title: "Łysula (551 m)",
+            url: "https://mapy.com/s/namuzodemu"
           }
+          
         ]
-      },
-      '2025-07-29': {
-        title: "Dzień 14 – Zakończenie: Chełm",
-        description: "Zwiedzanie kredowych podziemi w Chełmie. Oficjalne zakończenie wycieczki.",
-        googleMaps: "https://www.google.com/maps/dir//Podziemia+Kredowe,+Chełm"
       }
     };
 
