--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -117,8 +117,8 @@
     const content = {
       '2025-07-16': {
         title: "Dzień 1",
-        description: "Krotoszyn - Kozie Żebro - Wątkowa - Łysula - Schronisko Teodorówka - Pałac w Dukli - Argoturystyka Stokrotka Rymanów-Zdrój",
-        googleMaps: "https://maps.app.goo.gl/P2nfdWydi9QaXKEM6",
+        description: "Krotoszyn - Zamek w Czchowie - Zamek Tropsztyn - Kozie Żebro - Wątkowa - Łysula - Schronisko Teodorówka - Pałac w Dukli - Argoturystyka Stokrotka Rymanów-Zdrój",
+        googleMaps: "https://maps.app.goo.gl/AtTKRUocqhaTYCzT8",
         mapycz: [
           {
             title: "Kozie Żebro (888 m)",
