--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Wschodnia Polska – Wycieczka Objazdowa</title>
+  <title>Wschodnia Polska</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
