--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -130,7 +130,7 @@
           },
           {
             title: "Łysula (551 m)",
-            url: "https://mapy.com/s/namuzodemu"
+            url: "https://mapy.com/s/heputakela"
           }
           
         ]
