--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -60,6 +60,7 @@
     .description {
       margin-bottom: 15px;
       line-height: 1.5;
+      font-size: 20px;
     }
 
     .map-link {
@@ -67,6 +68,7 @@
       display: block;
       color: #0275d8;
       text-decoration: underline;
+      font-size: 20px;
     }
 
     .mountain-hike {
@@ -75,7 +77,7 @@
 
     .mountain-title {
       font-weight: bold;
-      font-size: 16px;
+      font-size: 20px;
       margin-bottom: 5px;
     }
 
@@ -133,6 +135,40 @@
             url: "https://mapy.com/s/heputakela"
           }
           
+        ]
+      },
+       '2025-07-17': {
+        title: "Dzień 2",
+        description: "Argoturystyka Stokrotka Rymanów-Zdrój - Baranie - Kamień - Tokarnia - Apartament Boho Ustrzyki Dolne",
+        googleMaps: "https://maps.app.goo.gl/bXtGXvBMi9gK7xHV7",
+        mapycz: [
+          {
+            title: "Baranie (754 m)",
+            url: "https://mapy.com/s/hamufudobu"
+          },
+          {
+            title: "Kamień (857 m)",
+            url: "https://mapy.com/s/mavubepoka"
+          },
+          {
+            title: "Tokarnia (778 m)",
+            url: "https://mapy.com/s/homozebota"
+          }
+        ]
+      },      
+      '2025-07-18': {
+        title: "Dzień 3",
+        description: "Apartament Boho Ustrzyki Dolne - Słonny (pn - zach) - Słonny (pd - wsch) - Apartament Boho Ustrzyki Dolne",
+        googleMaps: "https://maps.app.goo.gl/hJdZ7dV6KgRZA4fx5",
+        mapycz: [
+          {
+            title: "Słonny pn - zach (668 m)",
+            url: "https://mapy.com/s/fejesofomu"
+          },
+          {
+            title: "Słonny pd - wsch (668 m)",
+            url: "https://mapy.com/s/ledenedofu"
+          }
         ]
       }
     };
