--- a/inne.html
+++ b/inne.html
@@ -12,7 +12,7 @@
         <div class="buttons">
             <a href="https://dawid108.github.io/dawi108/20250712_wschodniapolska.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752348697/wschodniapolska_vcnauv.png" alt="Wschodnia Polska">
-                <span>Wschodnia Polska</span>
+                <span>Wschód Polski</span>
             </a>
             <a href="https://dawid108.github.io/dawi108/20250705_jezyknorweski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752342386/jezyknorweski_lko97f.png" alt="Język Norweski">
