--- a/inne.html
+++ b/inne.html
@@ -10,6 +10,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="https://dawid108.github.io/dawi108/20250715_pilka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750250889/pilka2_rofvtq.png" alt="Piłka Nożna">
+                <span>Piłka Nożna</span>
+            </a>
+            <a href="https://dawid108.github.io/dawi108/20250622_karty.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880191/kartylogo_xlku4l.png" alt="Karty">
+                <span>Karty Piłkarskie</span>
+            </a>
             <a href="https://dawid108.github.io/dawi108/20250712_wschodniapolska.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752348697/wschodniapolska_vcnauv.png" alt="Wschodnia Polska">
                 <span>Wschód Polski</span>
