--- a/20250715_pilka.html
+++ b/20250715_pilka.html
@@ -14,18 +14,18 @@
         <div class="table-wrapper">
             <table border="1">
                 <tr><th>M-ce</th><th>Drużyna</th><th>M</th><th>Bramki</th><th>Pkt</th></tr>
-                <tr><td></td>  <td>Bonikowia Boników</td>                 <td>22</td><td>98-23</td><td>54</td></tr>
-                <tr><td></td>  <td><b>Sokół Chwaliszew</b></td></td>      <td>22</td><td>104-32</td><td>51</td></tr>
-                <tr><td></td>  <td>Raszkowianka Raszków</td>              <td>22</td><td>73-40</td><td>51</td></tr>
-                <tr><td></td>  <td>Astra Meble Stolrus Krotoszyn II</td>  <td>22</td><td>63-40</td><td>41</td></tr>
-                <tr><td></td>  <td>LKS Gorzyce Małe Baby</td>             <td>22</td><td>72-52</td><td>40</td></tr>
-                <tr><td></td>  <td>CKS Zduny</td>                         <td>22</td><td>62-38</td><td>36</td></tr>
-                <tr><td></td>  <td>Piast Kobylin II</td>                  <td>22</td><td>60-48</td><td>36</td></tr>
-                <tr><td></td>  <td>KS Pogorzela</td>                      <td>22</td><td>46-55</td><td>23</td></tr>
-                <tr><td></td>  <td>Błękitni Sparta Kotlin</td>            <td>22</td><td>39-59</td><td>19</td></tr>
-                <tr><td></td> <td>UKS Żaki Taczanów</td>                 <td>22</td><td>32-108</td><td>13</td></tr>
-                <tr><td></td> <td>Grom Czeluścin</td>                    <td>22</td><td>19-90</td><td>10</td></tr>
-                <tr><td></td> <td>Błysk Daniszyn</td>                    <td>22</td><td>29-112</td><td>5</td></tr>
+                <tr><td>1</td>  <td>Bonikowia Boników</td>                 <td>22</td><td>98-23</td><td>54</td></tr>
+                <tr><td>2</td>  <td><b>Sokół Chwaliszew</b></td></td>      <td>22</td><td>104-32</td><td>51</td></tr>
+                <tr><td>3</td>  <td>Raszkowianka Raszków</td>              <td>22</td><td>73-40</td><td>51</td></tr>
+                <tr><td>4</td>  <td>Astra Meble Stolrus Krotoszyn II</td>  <td>22</td><td>63-40</td><td>41</td></tr>
+                <tr><td>5</td>  <td>LKS Gorzyce Małe Baby</td>             <td>22</td><td>72-52</td><td>40</td></tr>
+                <tr><td>6</td>  <td>CKS Zduny</td>                         <td>22</td><td>62-38</td><td>36</td></tr>
+                <tr><td>7</td>  <td>Piast Kobylin II</td>                  <td>22</td><td>60-48</td><td>36</td></tr>
+                <tr><td>8</td>  <td>KS Pogorzela</td>                      <td>22</td><td>46-55</td><td>23</td></tr>
+                <tr><td>9</td>  <td>Błękitni Sparta Kotlin</td>            <td>22</td><td>39-59</td><td>19</td></tr>
+                <tr><td>10</td> <td>UKS Żaki Taczanów</td>                 <td>22</td><td>32-108</td><td>13</td></tr>
+                <tr><td>11</td> <td>Grom Czeluścin</td>                    <td>22</td><td>19-90</td><td>10</td></tr>
+                <tr><td>12</td> <td>Błysk Daniszyn</td>                    <td>22</td><td>29-112</td><td>5</td></tr>
             </table> 
         </div>
         <h2>Wyniki</h2>
