--- a/inne.html
+++ b/inne.html
@@ -10,6 +10,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
+                <span>Angielski</span>
+            </a>
             <a href="https://dawid108.github.io/dawi108/20250715_pilka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750250889/pilka2_rofvtq.png" alt="Piłka Nożna">
                 <span>Piłka Nożna</span>
