--- a/20250712_wschodniapolska.html
+++ b/20250712_wschodniapolska.html
@@ -120,7 +120,7 @@
       '2025-07-16': {
         title: "Dzień 1",
         description: "Krotoszyn - Zamek w Czchowie - Zamek Tropsztyn - Kozie Żebro - Wątkowa - Łysula - Schronisko Teodorówka - Pałac w Dukli - Argoturystyka Stokrotka Rymanów-Zdrój",
-        googleMaps: "https://maps.app.goo.gl/AtTKRUocqhaTYCzT8",
+        googleMaps: "https://maps.app.goo.gl/E9BDJHNH7Be7xrpE6?g_st=afm",
         mapycz: [
           {
             title: "Kozie Żebro (888 m)",
