--- a/inne.html
+++ b/inne.html
@@ -14,6 +14,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
             </a>
+            <a href="20250731_madera.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753960384/oderaamadrea_v7klhv.png" alt="Madera">
+                <span>Madera</span>
+            </a>
             <a href="https://dawid108.github.io/dawi108/20250730_polskaobjazdowka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753873280/poslaobjazdowa_st2jct.png" alt="Polska Objazdówka">
                 <span>Polska Objazdówka</span>
