--- a/20250731_inne.html
+++ b/20250731_inne.html
@@ -39,7 +39,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753873280/poslaobjazdowa_st2jct.png" alt="Polska Objazdówka">
                 <span>Polska</span>
             </a>
-            <a href="20250731_madera.html" class="app-icon">
+            <a href="https://maps.app.goo.gl/gqxci1RUh4NY5cvH8?g_st=ac" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753961061/mapamadera_vlmqoc.png" alt="Mapa">
                 <span>Mapa</span>
             </a>
