--- a/20250730_polskaobjazdowka.html
+++ b/20250730_polskaobjazdowka.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Polska Objazdówka</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
   <style>
     /* Reset stylów domyślnych */
 * {
