--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Turniej FIFA</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: Arial, sans-serif;
