--- a/20250623_kregle.html
+++ b/20250623_kregle.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Kręgle HTML5 (Ostateczna Poprawka)</title>
+    <title>Super Kręgle</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
     <style>
         /* --- style.css --- */
         body {
