--- a/20250225_strony2.html
+++ b/20250225_strony2.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Barcelona</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="20250225_barca.css">
     </head>
     <body> 
