--- a/20250809_goldrun.html
+++ b/20250809_goldrun.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Gold Run</title>
-  <link rel="stylesheet" href="20250809_grstyle.css">
+  <link rel="stylesheet" href="20250809_grstyle.css" />
 </head>
 <body>
   <div id="gameWrap">
@@ -18,6 +18,10 @@
 
     <main id="stage">
       <div id="background" class="map-0"></div>
+      <div id="track-lines">
+        <div class="track-line" style="left:33.3%"></div>
+        <div class="track-line" style="left:66.6%"></div>
+      </div>
       <div id="player">🐱</div>
       <div id="ui">
         <button id="startBtn">Start</button>
