--- a/20250809_goldrun.html
+++ b/20250809_goldrun.html
@@ -2,9 +2,9 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Gold Run</title>
-  <link rel="stylesheet" href="20250809_grstyle.css" />
+  <link rel="stylesheet" href="20250809_grstyle.css">
 </head>
 <body>
   <div id="gameWrap">
@@ -12,46 +12,61 @@
       <h1>Gold Run</h1>
       <div class="hud">
         <div id="coins">Monety: <span>0</span></div>
-        <div id="best">Najlepszy: <span>0</span></div>
+        <div id="best">Rekord: <span>0</span></div>
       </div>
     </header>
 
     <main id="stage">
+      <!-- tło/mapa (zmienia się klasą) -->
       <div id="background" class="map-0"></div>
-      <div id="track-lines">
-        <div class="track-line" style="left:33.3%"></div>
-        <div class="track-line" style="left:66.6%"></div>
+
+      <!-- pasy/linie torów -->
+      <div id="lanes">
+        <div class="lane" data-lane="0"></div>
+        <div class="lane" data-lane="1"></div>
+        <div class="lane" data-lane="2"></div>
       </div>
-      <div id="player">🐱</div>
+
+      <!-- gracz -->
+      <div id="playerWrap">
+        <div id="player" class="run-frame">🐱</div>
+      </div>
+
+      <!-- kontener na obiekty spadające -->
+      <div id="objects"></div>
+
+      <!-- UI -->
       <div id="ui">
         <button id="startBtn">Start</button>
         <button id="jumpBtn">Skocz</button>
         <button id="shopBtn">Sklep</button>
       </div>
+
+      <!-- sklep (overlay) -->
+      <aside id="shop" class="hidden">
+        <h2>Sklep</h2>
+        <div class="balance">Monety: <span id="shopCoins">0</span></div>
+        <div class="section">
+          <h3>Postacie</h3>
+          <div id="chars" class="cards"></div>
+        </div>
+        <div class="section">
+          <h3>Mapy</h3>
+          <div id="maps" class="cards"></div>
+        </div>
+        <button id="closeShop">Zamknij</button>
+      </aside>
+
+      <!-- ekran game over -->
+      <div id="gameOver" class="hidden">
+        <h2>Przegrałeś!</h2>
+        <p>Wynik: <span id="scoreFinal">0</span></p>
+        <button id="restartBtn">Zagraj ponownie</button>
+      </div>
     </main>
 
-    <aside id="shop" class="hidden">
-      <h2>Sklep</h2>
-      <div class="balance">Monety: <span id="shopCoins">0</span></div>
-      <div class="section">
-        <h3>Postacie</h3>
-        <div id="chars" class="cards"></div>
-      </div>
-      <div class="section">
-        <h3>Mapy</h3>
-        <div id="maps" class="cards"></div>
-      </div>
-      <button id="closeShop">Zamknij</button>
-    </aside>
-
-    <div id="gameOver" class="hidden">
-      <h2>Przegrałeś!</h2>
-      <p>Wynik: <span id="scoreFinal">0</span></p>
-      <button id="restartBtn">Zagraj ponownie</button>
-    </div>
-
     <footer>
-      <small>Gold Run — gra mobilna w przeglądarce</small>
+      <small>Gold Run — wersja z trzema torami</small>
     </footer>
   </div>
 
