--- a/gry.html
+++ b/gry.html
@@ -12,9 +12,13 @@
     <div class="container">
         <h1>Gry</h1>
         <div class="buttons">
-            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
-                <span>Kółko i Krzyżyk</span>
+            <a href="20250809_goldrun.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
+                <span>Gold Run</span>
+            </a>
+            <a href="20250809_ufo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
+                <span>Ufo</span>
             </a>
             <a href="20250617_kosmicznykwadrat.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
@@ -23,6 +27,10 @@
             <a href="20250620_zbieraniejablek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
                 <span>Zbieranie Jabłek</span>
+            </a>
+            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
+                <span>Kółko i Krzyżyk</span>
             </a>
             <a href="20250618_ucieczka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324569/omijanie_gsykcx.jpg" alt="Omijanie">
