--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
                 <span>Aplikacje</span>
             </a>
+            <a href="20250809_goldrun.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
+                <span>Gold Run</span>
+            </a>
+            <a href="20250809_ufo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
+                <span>Ufo</span>
+            </a>
             <a href="20250617_kosmicznykwadrat.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
                 <span>Kosmiczny Kwadrat</span>
-            </a>
-            <a href="https://dawid108.github.io/dawi108/20250626_sredniakoncowa.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958961/sredniaocenkonczowych_bqwe0b.png" alt="Średnia">
-                <span>Średnia</span>
             </a>
             <a href="20250620_zbieraniejablek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
@@ -38,10 +42,6 @@
             <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
                 <span>Kółko i Krzyżyk</span>
-            </a>
-            <a href="https://dawid108.github.io/dawi108/20250703_norwegia.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Norwegia">
-                <span>Norwegia</span>
             </a>
         </div>
     </div>
