--- a/inne.html
+++ b/inne.html
@@ -12,53 +12,101 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
-            <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
-                <span>Angielski</span>
+            <a href="20250809_goldrun.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
+                <span>Gold Run</span>
+            </a>
+            <a href="20250809_ufo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
+                <span>Ufo</span>
+            </a>
+            <a href="20250801_posty.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754816644/psoty_bqgdbh.png" alt="Zdjęcia">
+                <span>Zdjęcia</span>
             </a>
             <a href="20250731_madera.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753960384/oderaamadrea_v7klhv.png" alt="Madera">
                 <span>Madera</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250730_polskaobjazdowka.html" class="app-icon">
+            <a href="20250730_polskaobjazdowka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753873280/poslaobjazdowa_st2jct.png" alt="Polska Objazdówka">
-                <span>Polska Objazdówka</span>
+                <span>Polska</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250715_pilka.html" class="app-icon">
+            <a href="20250715_pilka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750250889/pilka2_rofvtq.png" alt="Piłka Nożna">
                 <span>Piłka Nożna</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250622_karty.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880191/kartylogo_xlku4l.png" alt="Karty">
-                <span>Karty Piłkarskie</span>
-            </a>
-            <a href="https://dawid108.github.io/dawi108/20250712_wschodniapolska.html" class="app-icon">
+            <a href="20250712_wschodniapolska.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752348697/wschodniapolska_vcnauv.png" alt="Wschodnia Polska">
                 <span>Wschód Polski</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250705_jezyknorweski.html" class="app-icon">
+            <a href="20250705_jezyknorweski.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752342386/jezyknorweski_lko97f.png" alt="Język Norweski">
-                <span>Język Norweski</span>
+                <span>Norweski</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250703_norwegia.html" class="app-icon">
+            <a href="dawi108/20250703_norwegia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Norwegia">
                 <span>Norwegia</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250625_fifa.html" class="app-icon">
+            <a href="20250626_sredniakoncowa.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958961/sredniaocenkonczowych_bqwe0b.png" alt="Średnia">
+                <span>Średnia</span>
+            </a>
+            <a href="20250626_inneosiagniecia.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750959133/inneosiagniecia_tykgty.png" alt="Inne Osiągnięcia">
+                <span>Osiągnięcia</span>
+            </a>
+            <a href="20250625_szkola.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882454/szkolaklasa2_m1nj0h.png" alt="Szkola 2">
+                <span>Szkoła 2</span>
+            </a>
+            <a href="20250625_fifa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
                 <span>Turniej Fifa</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250626_inneosiagniecia.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750959133/inneosiagniecia_tykgty.png" alt="Inne Osiągnięcia">
-                <span>Inne Osiągnięcia</span>
-            </a>
-            <a href="https://dawid108.github.io/dawi108/20250623_kregle.html" class="app-icon">
+            <a href="20250623_kregle.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882768/kregle_vuxam4.png" alt="Kręgle">
                 <span>Kręgle</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250625_szkola.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882454/szkolaklasa2_m1nj0h.png" alt="Szkola 2">
-                <span>Szkoła 2</span>
+            <a href="20250622_karty.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880191/kartylogo_xlku4l.png" alt="Karty">
+                <span>Karty</span>
+            </a>
+            <a href="20250621_szachygadkowie.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750252388/szachy2_zwtvhi.png" alt="Szachy">
+                <span>Szachy</span>
+            </a>
+            <a href="20250620_zbieraniejablek.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
+                <span>Zbieranie Jabłek</span>
+            </a>
+            <a href="20250620_krotoszankarower.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1751102833/krotoszankakok_b6lgk1.png" alt="Krotoszanka">
+                <span>Krotoszanka</span>
+            </a>
+            <a href="20250619_tempobiegu.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
+                <span>Tempo</span>
+            </a>
+            <a href="20250618_ucieczka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324569/omijanie_gsykcx.jpg" alt="Omijanie">
+                <span>Omijanie</span>
+            </a>
+            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
+                <span>Kółko i Krzyżyk</span>
+            </a>
+            <a href="20250617_kosmicznykwadrat.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
+                <span>Kwadrat</span>
+            </a>
+            <a href="20250617_kolofortuny.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
+                <span>Koło Fortuny</span>
+            </a>
+            <a href="20250617_kostka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
+                <span>Kostka</span>
             </a>
         </div>
     </div>
