--- a/aplikacje.html
+++ b/aplikacje.html
@@ -12,25 +12,29 @@
     <div class="container">
         <h1>Aplikacje</h1>
         <div class="buttons">
-            <a href="https://dawid108.github.io/dawi108/20250617_kolofortuny.html" class="app-icon">
+            <a href="20250617_kolofortuny.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
                 <span>Koło Fortuny</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250617_kostka.html" class="app-icon">
+            <a href="20250617_kostka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
                 <span>Kostka</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250619_tempobiegu.html" class="app-icon">
+            <a href="20250619_tempobiegu.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
                 <span>Tempo Biegu</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250626_sredniakoncowa.html" class="app-icon">
+            <a href="20250626_sredniakoncowa.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958961/sredniaocenkonczowych_bqwe0b.png" alt="Średnia">
                 <span>Średnia</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250620_krotoszankarower.html" class="app-icon">
+            <a href="20250620_krotoszankarower.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1751102833/krotoszankakok_b6lgk1.png" alt="Krotoszanka">
                 <span>Krotoszanka</span>
+            </a>
+            <a href="inne.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
+                <span>Inne</span>
             </a>
         </div>
     </div>
