--- a/inne.html
+++ b/inne.html
@@ -44,7 +44,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752342386/jezyknorweski_lko97f.png" alt="Język Norweski">
                 <span>Norweski</span>
             </a>
-            <a href="dawi108/20250703_norwegia.html" class="app-icon">
+            <a href="20250703_norwegia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Norwegia">
                 <span>Norwegia</span>
             </a>
