--- a/inne.html
+++ b/inne.html
@@ -74,7 +74,7 @@
             </a>
             <a href="20250621_szachygadkowie.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750252388/szachy2_zwtvhi.png" alt="Szachy">
-                <span>Szachy</span>
+                <span>Gądkowice</span>
             </a>
             <a href="20250620_zbieraniejablek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
