--- a/gry.html
+++ b/gry.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Gry</h1>
         <div class="buttons">
+            <a href="20250811_wedkarstwo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
+                <span>Wędkarstwo</span>
+            </a>
             <a href="20250809_goldrun.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
                 <span>Gold Run</span>
