--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
                 <span>Aplikacje</span>
             </a>
+            <a href="20250811_wedkarstwo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
+                <span>Wędkarstwo</span>
+            </a>
             <a href="20250809_goldrun.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
                 <span>Gold Run</span>
@@ -34,10 +38,6 @@
             <a href="20250620_zbieraniejablek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
                 <span>Zbieranie Jabłek</span>
-            </a>
-            <a href="20250731_madera.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753960384/oderaamadrea_v7klhv.png" alt="Madera">
-                <span>Madera</span>
             </a>
             <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
